--- a/src/app.scss
+++ b/src/app.scss
@@ -6,9 +6,25 @@
     min-height: 2975px;
     background-image: url("images/board.jpg");
     background-repeat: no-repeat;
-  }
 
-  aside {
+    svg g {
+      fill: none;
+      stroke: none;
+      pointer-events: all;
+      opacity: 0.7;
+
+      &:hover {
+        fill: orange;
+        opacity: 0.7;
+      }
+
+      &.dragging-hover {
+        path {
+          fill: white;
+          opacity: 0.7;
+        }
+      }
+    }
   }
 }
 
