--- a/src/influence-track/InfluenceTrack.scss
+++ b/src/influence-track/InfluenceTrack.scss
@@ -1,25 +1,25 @@
 .tracks {
-  opacity: 0.8;
-  margin-top: 80px;
-  margin-left: 20px;
   display: flex;
 
-  li {
-    border: 1px solid;
-    height: 865px;
-    width: 145px;
-    display: flex;
-    justify-content: center;
+  padding-top: 50px;
 
-    ol {
-      li {
-        background-color: green;
-        opacity: 0.8;
-        width: 113px;
-        height: 113px;
-        border-radius: 113px;
-        margin-bottom: 35px;
-      }
+  height: 1153px;
+
+  ol {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: space-between;
+
+    height: 867px;
+    width: 147px;
+
+    li {
+      $size: 118px;
+      width: $size;
+      height: $size;
+      border-radius: $size;
     }
   }
 }
