--- a/src/round-track/RoundTrack.scss
+++ b/src/round-track/RoundTrack.scss
@@ -1,4 +1,16 @@
 .track {
-  background-color: black;
-  opacity: 0.8;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 0;
+
+  height: 965px;
+  width: 235px;
+
+  li {
+    height: 90px;
+    width: 160px
+  }
 }
