--- a/src/supply-track/SupplyTrack.scss
+++ b/src/supply-track/SupplyTrack.scss
@@ -1,8 +1,14 @@
 .track {
-  opacity: 0.8;
-  background-color: black;
-  height: 865px;
-  width: 485px;
-  margin-top: 80px;
-  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: space-between;
+
+  height: 670px;
+
+  li {
+    height: 95px;
+    width: 400px;
+  }
 }
