--- a/src/victory-track/VictoryTrack.scss
+++ b/src/victory-track/VictoryTrack.scss
@@ -1,5 +1,18 @@
 .track {
-  opacity: 0.8;
   display: flex;
-  background-color: black;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 0;
+
+  height: 965px;
+  width: 235px;
+
+
+  li {
+    width: 100%;
+    height: 128px;
+  }
 }
+
