--- a/src/war-room/WarRoom.scss
+++ b/src/war-room/WarRoom.scss
@@ -2,6 +2,7 @@
 	position: absolute;
 
 	background-color: rgba(0,0,0,.7);
+  transform: translate(0px, 0px);
 
 	width: 800px;
 	height: 400px;
@@ -10,4 +11,9 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
+
+  &[data-dragging-over] {
+    background-color: rgba(255,255,255,.7);
+  }
 }
+
