--- a/src/war-room/WarRoom.scss
+++ b/src/war-room/WarRoom.scss
@@ -1,14 +1,20 @@
 .war-room {
 	position: absolute;
+	top: 30px;
+	left: 30px;
 
 	background-color: rgba(0,0,0,.7);
   transform: translate(0px, 0px);
 
-	width: 800px;
-	height: 400px;
+	width: auto;
+	height: auto;
 
-	top: 30px;
-	left: 30px;
+  padding: 5px;
+  color: white;
+
+  main {
+    display: flex;
+  }
 
   &[data-dragging-over] {
     background-color: rgba(255,255,255,.7);
