--- a/src/influence-track/InfluenceTracks.scss
+++ b/src/influence-track/InfluenceTracks.scss
@@ -1,8 +1,8 @@
+@import '../styles/mixins';
+
 .tracks {
   display: flex;
-
   padding-top: 50px;
-
   height: 1153px;
 
   ol {
@@ -20,6 +20,16 @@
       width: $size;
       height: $size;
       border-radius: $size;
+      padding: 5px;
     }
+  }
+}
+
+@each $faction in $factions {
+  .#{$faction}-influence-token {
+    @include piece;
+    height: 6.4em;
+    width: 6.3em;
+    background-image: url("images/tokens/influence/#{$faction}.png");
   }
 }
