--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
 @import './styles/reset.scss';
+@import './styles/scrollbar.scss';
 
-body {
-  background-color: red;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
