--- a/src/influence-track/InfluenceTracks.scss
+++ b/src/influence-track/InfluenceTracks.scss
@@ -21,6 +21,10 @@
       height: $size;
       border-radius: $size;
       padding: 5px;
+
+      &[data-dragging-over] {
+        background-color: rgba(255,255,255,.7);
+      }
     }
   }
 }
