--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,5 @@
 $factions: baratheon lannister stark greyjoy tyrell martell;
+$houses: baratheon lannister stark greyjoy tyrell martell;
 
 @mixin piece {
   background-repeat: no-repeat;
