Separates influence tokens in 3 reducers

--- a/src/components/board/Board.scss
+++ b/src/components/board/Board.scss
@@ -26,6 +26,12 @@
     padding-left: 15px;
   }
 
+  .influence-tracks {
+    display: flex;
+    padding-top: 55px;
+    height: 1153px;
+  }
+
   .supply {
     align-items: center;
     display: flex;
