--- a/src/components/round-track/RoundTrack.scss
+++ b/src/components/round-track/RoundTrack.scss
@@ -1,3 +1,5 @@
+@import 'styles/mixins';
+
 .track {
   display: flex;
   flex-direction: column;
@@ -12,5 +14,13 @@
   li {
     height: 90px;
     width: 160px
+  }
+
+  .round-marker {
+    @include piece;
+    height: 5em;
+    width: 6em;
+    background-image: url("images/round-marker.png");
+    background-position: center;
   }
 }
