--- a/src/components/war-room/WarRoom.scss
+++ b/src/components/war-room/WarRoom.scss
@@ -14,6 +14,14 @@
 
   main {
     display: flex;
+    flex-wrap: wrap;
+
+    width: 600px;
+  }
+
+  section {
+    width: 100%;
+    height: auto;
   }
 
   &[data-dragging-over] {
