Add card cover style

--- a/src/components/house-token/HouseToken.scss
+++ b/src/components/house-token/HouseToken.scss
@@ -51,4 +51,11 @@
     background-image: url("images/tokens/order/covers/#{$house}.png");
     background-size: cover;
   }
+  .#{$house}-card-cover {
+    @include piece;
+    height: 16em;
+    width: 10em;
+    background-image: url("images//cards/#{$house}-cover.png");
+    background-size: cover;
+  }
 }
