--- a/src/components/house-token/HouseToken.scss
+++ b/src/components/house-token/HouseToken.scss
@@ -49,13 +49,13 @@
     height: 5em;
     width: 5em;
     background-image: url("images/tokens/order/covers/#{$house}.png");
-    background-size: cover;
+    background-size: contain;
   }
   .#{$house}-card-cover {
     @include piece;
     height: 16em;
     width: 10em;
     background-image: url("images//cards/#{$house}-cover.png");
-    background-size: cover;
+    background-size: contain;
   }
 }
