Add unit and neutral force drop check, and consume garrison tokens from API

--- a/src/components/territory/Territory.scss
+++ b/src/components/territory/Territory.scss
@@ -11,3 +11,10 @@
   pointer-events: all;
   opacity: 0.7;
 }
+
+.territory-forbidden {
+  fill: black;
+  stroke: none;
+  pointer-events: all;
+  opacity: 0.7;
+}
