Using influence tokens reducer instead separates by type

--- a/src/components/house-token/HouseToken.scss
+++ b/src/components/house-token/HouseToken.scss
@@ -74,6 +74,13 @@ martell: "doran" "arianne" "nymeria" "darkstar" "obara" "areo" "redviper",
     background-size: contain;
   }
 
+  .#{$house}-influence-token {
+    @include piece;
+    height: 6.4em;
+    width: 6.3em;
+    background-image: url("images/tokens/influence/#{$house}.png");
+  }
+
   @include card($house, "card-cover");
 
   @each $card in map-get($cards, $house) {
