--- a/src/components/combat/Combat.scss
+++ b/src/components/combat/Combat.scss
@@ -1,14 +1,36 @@
+$combatAreaWidth: 600px;
+$combatAreaHeight: 350px;
+
 .combat {
   position: absolute;
   background-color: rgba(0,0,0,.7);
   transform: translate(0px, 0px);
-  width: 400px;
-  height: 300px;
-  top: 30px;
-  left: 660px;
+  width: $combatAreaWidth;
+  height: $combatAreaHeight;
+  top: 0;
+  left: 0;
 
   &[data-dragging-over] {
     background-color: rgba(255,255,255,.7);
+  }
+}
+
+.combat-area {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.combat-attacker-area, .combat-defender-area {
+  border: 1px solid rgba(255,255,255,.5);
+  height: 18em;
+  width: 13em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  & > div {
+    display: inline-block;
   }
 }
 
@@ -16,4 +38,9 @@
   position: fixed;
   top: 5px;
   left: 285px;
+}
+
+:export {
+  combatAreaWidth: $combatAreaWidth;
+  combatAreaHeight: $combatAreaHeight;
 }
